# crewai-ai-dashboard

./: .gitignore  app.py  faq_bot.py  pyproject.toml  render.yaml  requirements.txt  test_agents.py
agents/: credit_advisor.py  fintech_data_analyst.py  payment_manager.py  support_bot.py
templates/: index.html
